...
              <Ionicons name="create-outline" size={18} color="#000" />
              <Text style={styles.newChatLabel}>Yeni Sohbet</Text>
            </View>
          </TouchableOpacity>

          <TouchableOpacity
            testID="side-menu-outgoing-invoices"
            style={[
              styles.navBtn,
              activeScreen === "invoices" && styles.navBtnCurrent,
            ]}
            onPress={() => {
              if (activeScreen === "invoices") {
...
